# ByteBrief

./: .gitignore  Blueprint.md  ByteBrief_Platform_Summary.txt  ByteBrief_Presentation.html  ByteBrief_Presentation_Content.md  ByteBrief_Project_Report_Final.md  Let’s treat ByteBrief.txt  Phase1_Issues.txt  README.md  Readme.txt  byte-brief-logo-final.html  byte-brief-logo.html  bytebrief_auth_workflow.md  db.sqlite3  docx_text.txt  extract.py  extract2.py  package-lock.json  package.json  ppt_text.txt  pyproject.toml  test_bbc_scraper.py  test_cnn_scraper.py
ByteBrief/: README.md
ByteBrief/config/: news_sources.yaml
ByteBrief/src/scraper/: base_scraper.py  models.py
ByteBrief/src/scraper/sources/: __init__.py  bbc_scraper.py  cnn_scraper.py
Frontend/: backend_metadata.json  error_log.txt  index.html  package-lock.json  package.json  tailwind.config.js  test.js
Frontend/src/: App.js  index.css
Frontend/src/components/common/: ArticleImage.js  BrandSeal.js  GuestExploreBanner.js  MastheadLogo.js  SmartSignupTrigger.js
Frontend/src/components/layout/: BottomNavigation.js  Footer.js  Layout.js  Navigation.js
Frontend/src/components/sections/: ArticleCarousel.js  BreakingNewsBanner.js  CategoriesGrid.js  FeaturedNews.js  HeroSection.js  StatsSection.js
Frontend/src/data/: mockAnalytics.js
Frontend/src/hooks/: useRealTime.js
Frontend/src/pages/: AccountSettings.js  Analytics.js  ArticleDigestPage.js  Categories.js  CategoryPage.js  FAQPage.js  History.js  LandingPage.js  Login.js  SavedNews.js  SearchPage.js
Frontend/src/services/: api.js  authService.js
Frontend/src/utils/: iconMap.js
backend/: .env  .env.example  build.sh  chk_db.py  clear_users.py  debug_email.py  debug_login.py  delete_users.py  fix_db.py  manage.py  print_users.py  pyproject.toml  reclassify_db.py  requirements.txt  rescrape_db.py  setup_socialapp.py  test_api.py  update_images.py  update_site.py
backend/app/: main.py
backend/app/core/: config.py
backend/app/db/: mongo.py  setup_indexes.py
backend/app/scraper/: playwright_scraper.py  rss_fetcher.py
backend/app/scraper/spiders/: ap_news_spider.py  bbc_spider.py  reuters_spider.py
backend/app/tasks/: celery_app.py  nlp_tasks.py  scrape_tasks.py
backend/bytebrief_web/: settings.py  urls.py
backend/config/: settings.yaml  sources.yaml
backend/news_brief/: account_views.py  admin.py  apps.py  forms.py  models.py  scheduler.py  signals.py  tasks.py  urls.py  utils.py  views.py
backend/news_brief/management/commands/: import_regional_sources.py  import_sources.py  scrape_news.py
backend/news_brief/migrations/: 0001_initial.py  0002_bookmark.py  0003_userpreference_text_size_userpreference_theme_and_more.py
backend/news_brief/templates/news_brief/: digest_email.html
backend/src/bytebrief/: main.py
backend/src/bytebrief/agent/: comparer.py  orchestrator.py  processor.py
backend/src/bytebrief/scrapers/: aljazeera.py  apnews.py  arstechnica.py  async_universal.py  espn.py  factory.py  google_search.py  npr.py  reuters.py
backend/templates/account/email/: email_confirmation_signup_message.html  email_confirmation_signup_message.txt  email_confirmation_subject.txt  password_reset_key_message.html  password_reset_key_subject.txt
backend/templates/emails/: daily_digest_email.html  login_alert_email.html  welcome_email.html
bytebrief_web/: asgi.py  settings.py  urls.py  wsgi.py
config/: news_sources.yaml  settings.yaml  sources.yaml
news_brief/: views.py
news_brief/static/css/: style.css
news_brief/templates/news_brief/: index.html  results.html
output/: bbc_test_articles.json
src/: App.js
src/bytebrief/agent/: comparer.py
src/bytebrief/core/: base_scraper.py  models.py
src/bytebrief/scrapers/: bbc.py  cnn.py  guardian.py  techcrunch.py
src/components/layout/: Footer.js  Layout.js  Navigation.js
src/components/sections/: BreakingNewsBanner.js  CategoriesGrid.js  FeaturedNews.js  HeroSection.js  StatsSection.js
src/data/: categories.js  sampleData.js
src/scraper/: __init__.py  main.py  models.py
tests/: test_bbc_scraper.py  test_cnn_scraper.py
